# browser-use-test1

./: README.md  pyproject.toml
browser-use/: test1.py  test2.py  test3.py
src/: main.py  test.ipynb
