[project]
name = "browser-use-test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.24",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
]

[tool.taskipy.tasks]
sample = "python src/main.py"
sample2 = "python browser-use/test1.py"
format = "black src"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "taskipy>=1.14.1",
]
