[project]
name = "browser-use-test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.24",
    "langchain-aws>=0.2.22",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
]

[tool.taskipy.tasks]
sample = "python browser-use/test1.py"
sample2 = "python browser-use/test2.py"
sample3 = "python browser-use/test3.py"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "taskipy>=1.14.1",
]
